--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,45 @@
 
   <body>
     <div class="header" id="header">
-      <p>ヘッダ領域</p>
+      <h2>Bookers</h2>
+
+      <div id="slidemenu">
+            <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+              <% if user_signed_in? %>
+                <li class="">
+                  <%= link_to "Home" %>
+                </li>
+                <li class="">
+                  <%= link_to 'Users' %>
+                </li>
+                <li class="">
+                  <%= link_to 'Books' %>
+                </li>
+                <li class="">
+                  <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+                </li>
+
+              <% else %>
+                <li class="">
+                  <%= link_to "Home", root_path %>
+                </li>
+                <li class="">
+                  <%= link_to "About", home_about_path %>
+                </li>
+                <li class="">
+                  <%= link_to "Sign up", new_user_registration_path %>
+                </li>
+                <li class="">
+                  <%= link_to "Login", user_session_path %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
     </div>
 
    <%= yield %>
     
-    <footer>
+    <footer class="footer" id="footer">
       <p>CopyRight Infratop.inc</p>
     </footer>
 
