--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
             <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
               <% if user_signed_in? %>
                 <li class="">
-                  <%= link_to "Home" %>
+                  <%= link_to "Home", user_path(current_user.id) %>
                 </li>
                 <li class="">
-                  <%= link_to 'Users' %>
+                  <%= link_to 'Users', users_path %>
                 </li>
                 <li class="">
-                  <%= link_to 'Books' %>
+                  <%= link_to 'Books', books_path %>
                 </li>
                 <li class="">
                   <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
