--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,46 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3">
+			<h2>User info</h2>
+			<label class="">name</label>
+			<%= current_user.name %>
+			<!-- nameはまだ登録していないため非表示 -->
+
+
+			<h2>New Book</h2>
+
+			<%= form_for(@book) do |f| %>
+			    <label class="">Title</label>
+			    <br>
+			    <%= f.text_field :title, class:"book_title" %>
+				<br>
+			    <label class="">Opinion</label>
+			    <br>
+			    <%= f.text_area :opinion, class:"book_body" %>
+				<br>
+			    <%= f.submit "Create Book", class:"btn btn-info" %>
+			<% end %>
+		</div>
+		<div class="col-lg-9">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th width="50px"></th>
+						<th width="250px">Title</th>
+						<th width="500px">Opinion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @books.each do |book| %>
+					<tr>
+						<td>ユーザ画像</td>
+						<td><%= book.title %></td>
+						<td><%= book.opinion %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
