--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,17 +3,18 @@
 
 
 <!-- flashメッセージ入れる -->
+<div class="col-md-6 col-md-offset-4">
+	<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span><strong>Bookers</strong>  !!</h1>
 
-<h2>welcome to <strong>Bookers</strong>!!</h2>
+	<P>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span><strong>Bookers</strong>,<br>
+		you can share and exchange your opinions, inpressions, and<br>
+		emotions about various books!
+	</P>
+</div>
+<div class="col-md-4 col-md-offset-4">
+	<!-- 必要に応じてリンクに指定されたクラス名追加する -->
+	 <%= link_to 'Log in', user_session_path, class: "btn btn-info btn-block" %>
+	 
+	 <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success btn-block" %>
 
-<P>In <strong>Bookers</strong>,<br>
-	you can share and exchange your opinions, inpressions, and<br>
-	emotinos<br>
-	<br>
-	about various books!
-</P>
-
-<!-- 必要に応じてリンクに指定されたクラス名追加する -->
- <%= link_to 'Log in', user_session_path, class: "btn btn-info" %>
- <br>
- <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success" %>
+ </div>
