--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,46 +11,67 @@
 
 
   <body>
-    <div class="header" id="header">
-      <h2>Bookers</h2>
 
-      <div id="slidemenu">
-            <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
-              <% if user_signed_in? %>
-                <li class="">
-                  <%= link_to "Home", user_path(current_user.id) %>
-                </li>
-                <li class="">
-                  <%= link_to 'Users', users_path %>
-                </li>
-                <li class="">
-                  <%= link_to 'Books', books_path %>
-                </li>
-                <li class="">
-                  <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-                </li>
-
-              <% else %>
-                <li class="">
-                  <%= link_to "Home", root_path %>
-                </li>
-                <li class="">
-                  <%= link_to "About", home_about_path %>
-                </li>
-                <li class="">
-                  <%= link_to "Sign up", new_user_registration_path %>
-                </li>
-                <li class="">
-                  <%= link_to "Login", user_session_path %>
-                </li>
-              <% end %>
-            </ul>
-          </div>
-    </div>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <h3 class="nav navbar-nav navbar-left">Bookers</h3>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li class="">
+            <%= link_to user_path(current_user.id) do %>
+             <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+             <span>Home</span>
+             <% end %>
+          </li>
+          <li class="">
+            <%= link_to users_path do %>
+            <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+            <span>Users</span>
+            <% end %>
+          </li>
+          <li class="">
+            <%= link_to books_path do %>
+              <i class="glyphicon glyphicon-book" aria-hidden="true"></i>
+              <span>Books</span>
+            <% end %>
+          </li>
+          <li class="">
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="glyphicon glyphicon-log-out" aria-hidden="true"></i>
+               <span>Log out</span>
+            <% end %>
+          </li>
+        <% else %>
+          <li class="">
+            <%= link_to root_path do %>
+              <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+              <span>Home</span>
+            <% end %>
+          </li>
+          <li class="">
+            <%= link_to home_about_path do %>
+              <i class="glyphicon glyphicon-link" aria-hidden="true"></i>
+              <span>About</span>
+            <% end %>
+          </li>
+          <li class="">
+            <%= link_to new_user_registration_path do %>
+               <i class="glyphicon glyphicon-edit" aria-hidden="true"></i>
+               <span>Sign up</span>
+            <% end %>
+          </li>
+          <li class="">
+            <%= link_to user_session_path do %>
+                <i class="glyphicon glyphicon-log-in" aria-hidden="true"></i>
+                <span>Login</span>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </header>
 
    <%= yield %>
     
-    <footer class="footer" id="footer">
+    <footer class="col-md-3 col-md-offset-9">
       <p>CopyRight Infratop.inc</p>
     </footer>
 
