[Fix]サインアップ・ログインにユーザ名反映

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body>
 
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <!-- <header class="navbar navbar-fixed-top navbar-inverse"> -->
+    <header class="navbar navbar-inverse">
       <h3 class="nav navbar-nav navbar-left">Bookers</h3>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
