[Add]ユーザ編集機能（username,image,Introduction)

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,36 +1,45 @@
-<h2>Books</h2>
 
-<table>
-	<thead>
-		<tr>
-			<th width="50px"></th>
-			<th width="250px">Title</th>
-			<th width="500px">Opinion</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @books.each do |book| %>
-		<tr>
-			<td>ユーザ画像</td>
-			<td><%= book.title %></td>
-			<td><%= book.opinion %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class="container">
+	<div class="row">
+		<div class="col-md-3">
+			<h2>User info</h2>
+			<label class="">name</label>
+			<%= current_user.username %>
 
+			<h2>New Book</h2>
 
+			<%= form_for(@book) do |f| %>
+			    <label class="">Title</label>
+			    <br>
+			    <%= f.text_field :title, class:"book_title" %>
+				<br>
+			    <label class="">Opinion</label>
+			    <br>
+			    <%= f.text_area :opinion, class:"book_body" %>
+				<br>
+			    <%= f.submit "Create Book", class:"btn btn-info" %>
+			<% end %>
+		</div>
 
-<h2>New Book</h2>
-
-<%= form_for(@book) do |f| %>
-    <label class="">Title</label>
-    <br>
-    <%= f.text_field :title, class:"book_title" %>
-	<br>
-    <label class="">Opinion</label>
-    <br>
-    <%= f.text_area :opinion, class:"book_body" %>
-	<br>
-    <%= f.submit "Create Book", class:"btn btn-info" %>
-<% end %>
+		<div class="col-md-9">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th width="50px"></th>
+						<th width="250px">Title</th>
+						<th width="500px">Opinion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @books.each do |book| %>
+					<tr>
+						<td>ユーザ画像</td>
+						<td><%= book.title %></td>
+						<td><%= book.opinion %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
