[Add]ログインチェック[Update]各ページのデザイン変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,13 @@
       </ul>
     </header>
 
-   <%= yield %>
+    <!-- エラー・成功メッセージ -->
+    <% if flash[:notice] %>
+       <p><%= flash[:notice] %></p>
+    <% end %>
+
+    <!--本文  -->
+    <%= yield %>
     
     <footer class="col-md-3 col-md-offset-9">
       <p>CopyRight Infratop.inc</p>
