--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,40 +1,22 @@
-
 <div class="container">
 	<div class="row">
-		<div class="col-md-3">
-			<h2>User info</h2>
-			<label class="">name</label>
-			<%= current_user.username %>
-
-			<h2>New Book</h2>
-
-			<%= form_for(@book) do |f| %>
-			    <label class="">Title</label>
-			    <br>
-			    <%= f.text_field :title, class:"book_title" %>
-				<br>
-			    <label class="">Opinion</label>
-			    <br>
-			    <%= f.text_area :opinion, class:"book_body" %>
-				<br>
-			    <%= f.submit "Create Book", class:"btn btn-info" %>
-			<% end %>
-		</div>
-
+		<%= render 'users/sidebar', book: @book %>
+		
 		<div class="col-md-9">
+			<h2>Books</h2>
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<th width="50px"></th>
+						<th width="100px">Image</th>
 						<th width="250px">Title</th>
-						<th width="500px">Opinion</th>
+						<th width="400px">Opinion</th>
 					</tr>
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
 					<tr>
-						<td>ユーザ画像</td>
-						<td><%= book.title %></td>
+						<td><%= attachment_image_tag book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70"%></td>
+						<td><%= link_to book.title, book_path(book.id) %></td>
 						<td><%= book.opinion %></td>
 					</tr>
 					<% end %>
