--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<%= render 'users/sidebar', book: @book %>
+		<%= render 'users/sidebar', book: @book, user: @user %>
 		
 		<div class="col-md-9">
 			<h2>Books</h2>
@@ -15,7 +15,7 @@
 				<tbody>
 					<% @books.each do |book| %>
 					<tr>
-						<td><%= attachment_image_tag book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70"%></td>
+						<td><%= attachment_image_tag book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70" %></td>
 						<td><%= link_to book.title, book_path(book.id) %></td>
 						<td><%= book.opinion %></td>
 					</tr>
