--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,26 +1,29 @@
 		<div class="col-md-3">
+		
 			<h2>User info</h2>
-			<%= attachment_image_tag current_user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "120x140" %>
+			<%= attachment_image_tag user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "120x140" %>
 			<br>
 			<br>
 			<table class="table">
 				<tbody>
 					<tr>
 						<td>Name</td>
-						<td><%= current_user.username %></td>
+						<td><%= user.username %></td>
 					</tr>
 					<tr>
 						<td>Introduction</td>
-						<td><%= current_user.Introduction %></td>
+						<td><%= user.Introduction %></td>
 					</tr>
 				</tbody>
 			</table>
 
-			<%= link_to edit_user_path(current_user.id), class: "btn btn-info btn-block" do %>
-				<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-			<% end %>
-			
-
+<!-- ログイン中のユーザの編集ボタンは表示されないようにする -->
+			<% if current_user.id == user.id %>
+				<%= link_to edit_user_path(current_user.id), class: "btn btn-info btn-block" do %>
+					<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				<% end %>
+			<% end %>	
+		
 			<h2>New Book</h2>
 <!-- @を外した -->
 			<%= form_for(book) do |f| %>
