--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 	<div class="row">
-		<%= render 'users/sidebar', book: @book %>
+		<%= render 'users/sidebar', book: @book, user: @user %>
 
 		<div class="col-md-9">
 			<table class="table table-striped">
