[Add]感想の削除機能

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,6 +10,8 @@
 						<th width="100px">Image</th>
 						<th width="250px">Title</th>
 						<th width="400px">Opinion</th>
+						<th width="100px"></th>
+						<th width="100px"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -17,6 +19,8 @@
 						<td><%= attachment_image_tag @book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70"%> <%=  %></td>
 						<td><%= link_to @book.title, book_path(@book.id) %></td>
 						<td><%= @book.opinion %></td>
+						<td><%= link_to 'edit', edit_book_path, class: "btn btn-info" %></td>
+						<td><%= link_to 'destroy', book_path(@book), :method => :delete, data: { confirm: '削除しますか？' } , class: "btn btn-danger" %></td>
 					</tr>
 				</tbody>
 			</table>
