--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,12 @@
 						<td><%= attachment_image_tag @book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70"%> <%=  %></td>
 						<td><%= link_to @book.title, book_path(@book.id) %></td>
 						<td><%= @book.opinion %></td>
-						<td><%= link_to 'edit', edit_book_path, class: "btn btn-info" %></td>
+						<!-- ログインユーザの投稿のみ編集・削除フォームが表示せれるようにする -->
+						<td>
+							<% if current_user.id == user.id %>
+								<%= link_to 'edit', edit_book_path, class: "btn btn-info" %>
+							<% end %>
+						</td>
 						<td><%= link_to 'destroy', book_path(@book), :method => :delete, data: { confirm: '削除しますか？' } , class: "btn btn-danger" %></td>
 					</tr>
 				</tbody>
