--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,11 +21,15 @@
 						<td><%= @book.opinion %></td>
 						<!-- ログインユーザの投稿のみ編集・削除フォームが表示せれるようにする -->
 						<td>
-							<% if current_user.id == user.id %>
-								<%= link_to 'edit', edit_book_path, class: "btn btn-info" %>
+							<% if current_user.id == @book.user.id %>
+								<%= link_to 'edit', edit_book_path, class: "edit_book#{@book.id} btn btn-info" %>
 							<% end %>
 						</td>
-						<td><%= link_to 'destroy', book_path(@book), :method => :delete, data: { confirm: '削除しますか？' } , class: "btn btn-danger" %></td>
+						<td>
+							<% if current_user.id == @book.user.id %>
+								<%= link_to 'destroy', book_path(@book), :method => :delete, data: { confirm: '削除しますか？' } , class: "destroy_book#{@book.id} btn btn-danger" %>
+							<% end %>
+						</td>
 					</tr>
 				</tbody>
 			</table>
