--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -13,8 +13,8 @@
 </div>
 <div class="col-md-4 col-md-offset-4">
 	<!-- 必要に応じてリンクに指定されたクラス名追加する -->
-	 <%= link_to 'Log in', user_session_path, class: "btn btn-info btn-block" %>
+	 <%= link_to 'Log in', user_session_path, class: "sign-in btn btn-info btn-block" %>
 	 
-	 <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success btn-block" %>
+	 <%= link_to 'Sign up', new_user_registration_path, class: "sign-up btn btn-success btn-block" %>
 
  </div>
