--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,60 +14,63 @@
 
     <!-- <header class="navbar navbar-fixed-top navbar-inverse"> -->
     <header class="navbar navbar-inverse">
-      <h3 class="nav navbar-nav navbar-left">Bookers</h3>
-      <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li class="">
-            <%= link_to user_path(current_user.id) do %>
-             <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
-             <span>Home</span>
-             <% end %>
-          </li>
-          <li class="">
-            <%= link_to users_path do %>
-            <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            <span>Users</span>
-            <% end %>
-          </li>
-          <li class="">
-            <%= link_to books_path do %>
-              <i class="glyphicon glyphicon-book" aria-hidden="true"></i>
-              <span>Books</span>
-            <% end %>
-          </li>
-          <li class="">
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <i class="glyphicon glyphicon-log-out" aria-hidden="true"></i>
-               <span>Log out</span>
-            <% end %>
-          </li>
-        <% else %>
-          <li class="">
-            <%= link_to root_path do %>
-              <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
-              <span>Home</span>
-            <% end %>
-          </li>
-          <li class="">
-            <%= link_to home_about_path do %>
-              <i class="glyphicon glyphicon-link" aria-hidden="true"></i>
-              <span>About</span>
-            <% end %>
-          </li>
-          <li class="">
-            <%= link_to new_user_registration_path do %>
-               <i class="glyphicon glyphicon-edit" aria-hidden="true"></i>
-               <span>Sign up</span>
-            <% end %>
-          </li>
-          <li class="">
-            <%= link_to user_session_path do %>
-                <i class="glyphicon glyphicon-log-in" aria-hidden="true"></i>
-                <span>Login</span>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <h3 class="nav navbar-nav navbar col-md-7">Bookers</h3>
+        <ul class="nav navbar-nav navbar col-md-4">
+          <% if user_signed_in? %>
+            <li class="">
+              <%= link_to user_path(current_user.id), class: "home" do %>
+               <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+               <span>Home</span>
+               <% end %>
+            </li>
+            <li class="">
+              <%= link_to users_path, class: "users" do %>
+              <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+              <span>Users</span>
+              <% end %>
+            </li>
+            <li class="">
+              <%= link_to books_path, class: "books" do %>
+                <i class="glyphicon glyphicon-book" aria-hidden="true"></i>
+                <span>Books</span>
+              <% end %>
+            </li>
+            <li class="">
+              <%= link_to destroy_user_session_path, method: :delete, class: "logout" do %>
+                <i class="glyphicon glyphicon-log-out" aria-hidden="true"></i>
+                 <span>Log out</span>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="">
+              <%= link_to root_path, class: "home" do %>
+                <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+                <span>Home</span>
+              <% end %>
+            </li>
+            <li class="">
+              <%= link_to home_about_path, class: "About" do %>
+                <i class="glyphicon glyphicon-link" aria-hidden="true"></i>
+                <span>About</span>
+              <% end %>
+            </li>
+            <li class="">
+              <%= link_to new_user_registration_path, class: "sign_up" do %>
+                 <i class="glyphicon glyphicon-edit" aria-hidden="true"></i>
+                 <span>Sign up</span>
+              <% end %>
+            </li>
+            <li class="">
+              <%= link_to user_session_path, class: "sign_in" do %>
+                  <i class="glyphicon glyphicon-log-in" aria-hidden="true"></i>
+                  <span>Login</span>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </header>
 
     <!-- エラー・成功メッセージ b-->
