--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 					<% @books.each do |book| %>
 					<tr>
 						<td><%= attachment_image_tag book.user, :profile_image,  format: 'jpeg', class: "", fallback: "no_image.jpg", size: "60x70" %></td>
-						<td><%= link_to book.title, book_path(book.id) %></td>
+						<td><%= link_to book.title, book_path(book.id), class: "book_#{book.id}" %></td>
 						<td><%= book.opinion %></td>
 					</tr>
 					<% end %>
