[Fix]aboutクラス名、sing up時のバリデーションチェック

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
               <% end %>
             </li>
             <li class="">
-              <%= link_to home_about_path, class: "About" do %>
+              <%= link_to home_about_path, class: "about" do %>
                 <i class="glyphicon glyphicon-link" aria-hidden="true"></i>
                 <span>About</span>
               <% end %>
