[Add]jsによるタイトルの色変化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <header class="navbar navbar-inverse">
       <div class="row">
         <div class="col-md-1"></div>
-        <h3 class="nav navbar-nav navbar col-md-7">Bookers</h3>
+        <h3 class="jquery nav navbar-nav navbar col-md-7">Bookers</h3>
         <ul class="nav navbar-nav navbar col-md-4">
           <% if user_signed_in? %>
             <li class="">
