--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -17,4 +17,6 @@
 	 
 	 <%= link_to 'Sign up', new_user_registration_path, class: "sign-up btn btn-success btn-block" %>
 
+
+<h1 class="jquery">Hello jQuery!</h1>
  </div>
